RESOLVED FIXED161529
[GTK] Fix compiler warning in MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=161529
Summary [GTK] Fix compiler warning in MiniBrowser
Tomas Popela
Reported 2016-09-02 00:44:22 PDT
[5989/6114] Building C object Tools/MiniBrowser/gtk/CMakeFiles/MiniBrowser.dir/BrowserTab.c.o ../../Tools/MiniBrowser/gtk/BrowserTab.c: In function ‘decidePermissionRequest’: ../../Tools/MiniBrowser/gtk/BrowserTab.c:228:1: warning: control reaches end of non-void function [-Wreturn-type] } ^ [5991/6114] Building C object Tools/MiniBrowser/gtk/CMakeFiles/MiniBrowser.dir/BrowserWindow.c.o ../../Tools/MiniBrowser/gtk/BrowserWindow.c: In function ‘browserWindowConstructed’: ../../Tools/MiniBrowser/gtk/BrowserWindow.c:955:20: warning: unused variable ‘window’ [-Wunused-variable] BrowserWindow *window = BROWSER_WINDOW(gObject); ^~~~~~
Attachments
Proposed patch (1.92 KB, patch)
2016-09-02 00:48 PDT, Tomas Popela
no flags
Tomas Popela
Comment 1 2016-09-02 00:48:38 PDT
Created attachment 287748 [details] Proposed patch
WebKit Commit Bot
Comment 2 2016-09-02 01:56:18 PDT
Comment on attachment 287748 [details] Proposed patch Clearing flags on attachment: 287748 Committed r205343: <http://trac.webkit.org/changeset/205343>
WebKit Commit Bot
Comment 3 2016-09-02 01:56:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.