[GTK] Fix compiler warning in MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=161529

We were missing a return statement in decidePermissionRequest() and
also there was unused variable in browserWindowConstructed().

Patch by Tomas Popela <tpopela@redhat.com> on 2016-09-02
Reviewed by Carlos Garcia Campos.

* MiniBrowser/gtk/BrowserTab.c:
(decidePermissionRequest):
* MiniBrowser/gtk/BrowserWindow.c:
(browserWindowConstructed):

Canonical link: https://commits.webkit.org/179679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205343 268f45cc-cd09-0410-ab3c-d52691b4dbfc